--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Título do Site</title>
+    <title>Queijaria Canastrão</title>
+    <link rel="stylesheet" href="Style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Stoke:wght@300;400&display=swap" rel="stylesheet">
 </head>
-
 <body>
-    <main>
-        <header>
-            <h1>Título do Site</h1>
-        </header>
-        <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
-        </article>
-        <article>
-            <h2>Artigo 002</h2>
-            <p>Texto artigo 002</p>
-        </article>
-    </main>
+    <header>
+        <img src="CanastraoLogoTopo.png" alt="Logo da Queijaria" class="imgLogo">
+        <address class="ender">
+            <p>Av. Gorgonzola, 235</p>
+            <p>Tel: (21) 91235-1235</p>
+            <p>contato@canastrao.com.br</p>
+        </address>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="CanastraoQueijos.html" target="_blank">Apresentação</a></li>
+            <li><a href="Queijos.html" target="_blank">Queijos</a></li>
+            <li><a href="Harmonizacao.html" target="_blank">Harmonização</a></li>
+            <li><a href="Pedidos.html" target="_blank">Pedidos</a></li>
+        </ul>
+    </nav>
+    <section class="apres">
+        <img src="CanastraoLogo.png" alt="Logo Canastrão">
+    </section>
 </body>
-
 </html>
